--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
 }
+
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 32
@@ -45,4 +48,29 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // libraries
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'com.google.dagger:hilt-android:2.43.2'
+    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.github.skydoves:sandwich:1.2.7'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
+    implementation 'com.github.skydoves:whatif:1.1.1'
+    implementation 'com.github.skydoves:bundler:1.0.4'
+    testImplementation 'app.cash.turbine:turbine:0.9.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation 'com.github.skydoves:transformationlayout:1.1.1'
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.43.2'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.43.2'
+}
+
+kapt {
+    correctErrorTypes true
 }
