--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,17 @@
         android:theme="@style/Theme.AnimeList"
         tools:targetApi="31">
         <activity
+            android:name=".AnimeListActivity"
+            android:exported="true"
+            android:label="@string/title_activity_anime_list"
+            android:theme="@style/Theme.AnimeList">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
