--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,10 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.github.skydoves:sandwich:1.2.7'
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
     implementation 'com.github.skydoves:whatif:1.1.1'
     implementation 'com.github.skydoves:bundler:1.0.4'
     testImplementation 'app.cash.turbine:turbine:0.9.0'
